[change] 1. rewrite delete image api logic 2. swagger autogen for dev
